# asio_standalone

asio/: CMakeLists.txt  asio.pc.in
asio/include/: CMakeLists.txt
asio/include/asio/: async_result.hpp  basic_socket_acceptor.hpp  connect.hpp  io_context.hpp  require.hpp
asio/include/asio/detail/: type_traits.hpp
asio/include/asio/detail/impl/: reactive_socket_service_base.ipp  service_registry.hpp  service_registry.ipp
asio/include/asio/impl/: io_context.hpp  io_context.ipp
asio/include/asio/ip/: basic_resolver.hpp
asio/src/: CMakeLists.txt
